Replace com.google.common.base.*