@@ -20,7 +20,6 @@ import static com.github.tomakehurst.wiremock.matching.RequestMatcherExtension.N
 import static com.github.tomakehurst.wiremock.matching.RequestPatternBuilder.newRequestPattern;
 import static com.github.tomakehurst.wiremock.matching.WeightedMatchResult.weight;
 import static com.google.common.base.MoreObjects.firstNonNull;
-import static com.google.common.collect.FluentIterable.from;
 import static com.google.common.net.HttpHeaders.AUTHORIZATION;
 import static java.util.Arrays.asList;
 import static java.util.stream.Collectors.toList;
@@ -29,7 +28,6 @@ import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.github.tomakehurst.wiremock.client.BasicCredentials;
-import com.github.tomakehurst.wiremock.client.WireMock;
 import com.github.tomakehurst.wiremock.common.Json;
 import com.github.tomakehurst.wiremock.common.url.PathParams;
 import com.github.tomakehurst.wiremock.common.url.PathTemplate;
@@ -37,10 +35,11 @@ import com.github.tomakehurst.wiremock.http.Cookie;
 import com.github.tomakehurst.wiremock.http.Request;
 import com.github.tomakehurst.wiremock.http.RequestMethod;
 import com.github.tomakehurst.wiremock.stubbing.ServeEvent;
-import com.google.common.base.Function;
-import com.google.common.base.Predicate;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableMap.Builder;
 import java.util.*;
+import java.util.function.Function;
+import java.util.function.Predicate;
 import org.apache.commons.lang3.StringUtils;
 
 public class RequestPattern implements NamedValueMatcher<Request> {
@@ -174,7 +173,7 @@ public class RequestPattern implements NamedValueMatcher<Request> {
           null,
           null,
           null,
-          WireMock.anyUrl(),
+          anyUrl(),
           RequestMethod.ANY,
           null,
           null,
@@ -227,7 +226,7 @@ public class RequestPattern implements NamedValueMatcher<Request> {
 
   @Override
   public MatchResult match(Request request) {
-    return match(request, Collections.<String, RequestMatcherExtension>emptyMap());
+    return match(request, Collections.emptyMap());
   }
 
   public static RequestPattern everything() {
@@ -293,14 +292,11 @@ public class RequestPattern implements NamedValueMatcher<Request> {
 
     if (combinedHeaders != null && !combinedHeaders.isEmpty()) {
       return MatchResult.aggregate(
-          from(combinedHeaders.entrySet())
-              .transform(
-                  new Function<Map.Entry<String, MultiValuePattern>, MatchResult>() {
-                    public MatchResult apply(Map.Entry<String, MultiValuePattern> headerPattern) {
-                      return headerPattern.getValue().match(request.header(headerPattern.getKey()));
-                    }
-                  })
-              .toList());
+          combinedHeaders.entrySet().stream()
+              .map(
+                  headerPattern ->
+                      headerPattern.getValue().match(request.header(headerPattern.getKey())))
+              .collect(toList()));
     }
 
     return MatchResult.exactMatch();
@@ -312,10 +308,9 @@ public class RequestPattern implements NamedValueMatcher<Request> {
     }
 
     Map<String, MultiValuePattern> combinedHeaders = headers;
-    ImmutableMap.Builder<String, MultiValuePattern> allHeadersBuilder =
+    Builder<String, MultiValuePattern> allHeadersBuilder =
         ImmutableMap.<String, MultiValuePattern>builder()
-            .putAll(
-                firstNonNull(combinedHeaders, Collections.<String, MultiValuePattern>emptyMap()));
+            .putAll(firstNonNull(combinedHeaders, Collections.emptyMap()));
     allHeadersBuilder.put(AUTHORIZATION, basicAuthCredentials.asAuthorizationMultiValuePattern());
     combinedHeaders = allHeadersBuilder.build();
     return combinedHeaders;
@@ -324,17 +319,13 @@ public class RequestPattern implements NamedValueMatcher<Request> {
   private MatchResult allQueryParamsMatch(final Request request) {
     if (queryParams != null && !queryParams.isEmpty()) {
       return MatchResult.aggregate(
-          from(queryParams.entrySet())
-              .transform(
-                  new Function<Map.Entry<String, MultiValuePattern>, MatchResult>() {
-                    public MatchResult apply(
-                        Map.Entry<String, MultiValuePattern> queryParamPattern) {
-                      return queryParamPattern
+          queryParams.entrySet().stream()
+              .map(
+                  queryParamPattern ->
+                      queryParamPattern
                           .getValue()
-                          .match(request.queryParameter(queryParamPattern.getKey()));
-                    }
-                  })
-              .toList());
+                          .match(request.queryParameter(queryParamPattern.getKey())))
+              .collect(toList()));
     }
 
     return MatchResult.exactMatch();
@@ -343,17 +334,13 @@ public class RequestPattern implements NamedValueMatcher<Request> {
   private MatchResult allFormParamsMatch(final Request request) {
     if (formParams != null && !formParams.isEmpty()) {
       return MatchResult.aggregate(
-          from(formParams.entrySet())
-              .transform(
-                  new Function<Map.Entry<String, MultiValuePattern>, MatchResult>() {
-                    public MatchResult apply(
-                        Map.Entry<String, MultiValuePattern> formParamPattern) {
-                      return formParamPattern
+          formParams.entrySet().stream()
+              .map(
+                  formParamPattern ->
+                      formParamPattern
                           .getValue()
-                          .match(request.formParameter(formParamPattern.getKey()));
-                    }
-                  })
-              .toList());
+                          .match(request.formParameter(formParamPattern.getKey())))
+              .collect(toList()));
     }
 
     return MatchResult.exactMatch();
@@ -379,47 +366,37 @@ public class RequestPattern implements NamedValueMatcher<Request> {
     return MatchResult.exactMatch();
   }
 
-  @SuppressWarnings("unchecked")
+  @SuppressWarnings({"unchecked", "rawtypes"})
   private MatchResult allBodyPatternsMatch(final Request request) {
     if (bodyPatterns != null && !bodyPatterns.isEmpty() && request.getBody() != null) {
       return MatchResult.aggregate(
-          from(bodyPatterns)
-              .transform(
-                  new Function<ContentPattern, MatchResult>() {
-                    @Override
-                    public MatchResult apply(ContentPattern pattern) {
-                      if (StringValuePattern.class.isAssignableFrom(pattern.getClass())) {
-                        String body =
-                            StringUtils.isEmpty(request.getBodyAsString())
-                                ? null
-                                : request.getBodyAsString();
-                        return pattern.match(body);
-                      }
+          bodyPatterns.stream()
+              .map(
+                  (Function<ContentPattern, MatchResult>)
+                      pattern -> {
+                        if (StringValuePattern.class.isAssignableFrom(pattern.getClass())) {
+                          String body =
+                              StringUtils.isEmpty(request.getBodyAsString())
+                                  ? null
+                                  : request.getBodyAsString();
+                          return pattern.match(body);
+                        }
 
-                      return pattern.match(request.getBody());
-                    }
-                  })
-              .toList());
+                        return pattern.match(request.getBody());
+                      })
+              .collect(toList()));
     }
 
     return MatchResult.exactMatch();
   }
 
-  @SuppressWarnings("unchecked")
   private MatchResult allMultipartPatternsMatch(final Request request) {
     if (multipartPatterns != null && !multipartPatterns.isEmpty()) {
       if (!request.isMultipart()) {
         return MatchResult.noMatch();
       }
       return MatchResult.aggregate(
-          from(multipartPatterns)
-              .transform(
-                  new Function<MultipartValuePattern, MatchResult>() {
-                    public MatchResult apply(MultipartValuePattern pattern) {
-                      return pattern.match(request);
-                    }
-                  })
-              .toList());
+          multipartPatterns.stream().map(pattern -> pattern.match(request)).collect(toList()));
     }
 
     return MatchResult.exactMatch();
@@ -593,20 +570,10 @@ public class RequestPattern implements NamedValueMatcher<Request> {
 
   public static Predicate<Request> thatMatch(
       final RequestPattern pattern, final Map<String, RequestMatcherExtension> customMatchers) {
-    return new Predicate<Request>() {
-      @Override
-      public boolean apply(Request request) {
-        return pattern.match(request, customMatchers).isExactMatch();
-      }
-    };
+    return request -> pattern.match(request, customMatchers).isExactMatch();
   }
 
-  public static Predicate<ServeEvent> withRequstMatching(final RequestPattern pattern) {
-    return new Predicate<ServeEvent>() {
-      @Override
-      public boolean apply(ServeEvent serveEvent) {
-        return pattern.match(serveEvent.getRequest()).isExactMatch();
-      }
-    };
+  public static Predicate<ServeEvent> withRequestMatching(final RequestPattern pattern) {
+    return serveEvent -> pattern.match(serveEvent.getRequest()).isExactMatch();
   }
 }
